--- a/src/libs/i18n/locales/en.json
+++ b/src/libs/i18n/locales/en.json
@@ -18,7 +18,7 @@
   },
   "UI Elements": "UI Elements",
   "Forms & Tables": "Forms & Tables",
-  "Pages": "Pages",
+  "Pages": "pages",
   "Charts & Maps": "Charts & Maps",
   "Others": "Others",
   "Typography": "Typography",
